--- a/capstone/public/index.html
+++ b/capstone/public/index.html
@@ -6,7 +6,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>MANGAT 45</title>
+    <title>HealthRoom</title>
+     <link rel="icon" href="../src/assets/brand.png">
   </head>
   <body>
     <div id="root"></div>
